# clothing_app

./: pyproject.toml
.streamlit/: config.toml
app/: forecast.py  functions.py  main.py  models.py
data/: clothing_data copy.csv  clothing_data.csv  outfit_data.csv  worn_outfits.csv
