[project]
name = "clothing-app"
version = "0.1.0"
description = ""
authors = [
    {name = "lottedieleman",email = "lotte.dieleman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
