[tool.poetry]
name = "clothing-app"
version = "0.1.0"
description = ""
authors = ["lottedieleman <xxxx>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2.3,<3.0.0"
streamlit = ">=1.42.0,<2.0.0"
watchdog = ">=6.0.0,<7.0.0"
requests = ">=2.32.3,<3.0.0"
datetime = ">=5.5,<6.0"
plotly = "^6.0.0"
streamlit-pills = "^0.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"